Revert "Drop support for Mac OS X 10.4 Tiger"
This reverts commit fe87793b8e5bb4a05bc432a3c3b17b3fb870b0c7.

--- a/src/port/Makefile.in
+++ b/src/port/Makefile.in
@@ -40,8 +40,10 @@ install: all mkdirs
 	$(INSTALL)    -o "${DSTUSR}" -g "${DSTGRP}" -m 555 port portindex portmirror port-tclsh "${DESTDIR}${bindir}/"
 	$(LN_S) -f port "${DESTDIR}${bindir}/portf"
 ifeq (darwin,@OS_PLATFORM@)
+ifneq (8,@OS_MAJOR@)
 	chmod -h 555 "${DESTDIR}${bindir}/portf"
 endif
 
 codesign:: port-tclsh
 	../codesign.sh $?
+endif
