--- a/Makefile.in
+++ b/Makefile.in
@@ -83,6 +83,14 @@ ifeq ($(DESTDIR),)
                     ${DSCL} -q . -create "/Users/${RUNUSR}" NFSHomeDirectory "${localstatedir}/macports/home" ; \
                 fi ; \
             fi ; \
+            if test "@OS_MAJOR@" -eq 8 -a `id -u` -eq 0; then \
+                GID=`${DSCL} -q . -read "/Groups/${RUNUSR}" PrimaryGroupID | /usr/bin/awk '{print $$2}'` ; \
+                if test "`${DSCL} -q . -read "/Users/${RUNUSR}" PrimaryGroupID 2>/dev/null | /usr/bin/awk '{print $$2}'`" != "$$GID"; then \
+                    echo "Fixing PrimaryGroupID for user \"${RUNUSR}\"" ; \
+                    ${DSCL} -q . -create "/Users/${RUNUSR}" PrimaryGroupID $$GID ; \
+                    ${DSCL} -q . -create "/Users/${RUNUSR}" RealName MacPorts ; \
+                fi ; \
+            fi ; \
         else \
             echo "Can't find ${DSCL} / ${DSEDITGROUP}, not creating user \"${RUNUSR}\"" ; \
         fi ; \
